<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tilt</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="edit_message">Enter a Message </string>
    <string name="button_send">Send</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_display_message">DisplayMessageActivity</string>
    <string name="title_activity_bluetooth">BlueTooth</string>
    <string name="title_activity_light">Light</string>
    <string name="title_activity_sound">Sound</string>
   
    
    <string name="button_bluetooth">Bluetooth</string>
    <string name="button_light">Light</string>
    <string name="button_sound">Sound</string>
    <string name="toggle_bluetooth">Bluetooth</string>
    <string name="toggle_light">Light</string>
    <string name="ring_sound">Sound</string>
    
    <string name="lastConnectLab">Last connected device:</string>
    <string name="connLastDevice">Connect Last Device</string>
    <string name="scanAll">Scan All</string>


     <string name="Rssi">RSSI</string>
      <string name="rssiValue">---</string>
      <string name="digitalOut">Digital Out</string>
      <string name="digitalIn">Digital In</string>
      <string name="Pin">Pin</string>
      <string name="pinValue4">[ 4 ]</string>
      <string name="pinValue5">[ 5 ]</string>
      <string name="pinValue6">[ 6 ]</string>
      <string name="pinValue7">[ 7 ]</string>
      <string name="pinValueA5">[ A5 ]</string>
      <string name="write">write</string>
      <string name="read">read</string>
      <string name="PWM">PWM</string>
      <string name="Servo">Servo</string>
      <string name="AnalogIn">Analog In</string>
      <string name="AIText">----</string>
      <string name="connect">Connect</string>
     <string name="loading">Refreshing......</string>





 
</resources>
